<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gb1"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="50dp" >
    <TextView
            android:id="@+id/et_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/text2"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

    <TextView
            android:id="@+id/cb_rm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_below="@id/et_text"
            android:textSize="18sp"
            android:text="@string/text3"
            android:paddingTop="30dp"
            android:textColor="@color/black" />

    <LinearLayout
            android:id="@+id/lyout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/cb_rm"
            android:paddingTop="35dp"
    >
        <TextView
                android:id="@+id/usernametext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="left"
                android:layout_marginStart="20dp"
                android:text="@string/signusername"
                android:textSize="20sp" />

        <EditText
                android:id="@+id/username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:hint="@string/username"
                android:textSize="20sp"
                android:textColorHint="@color/white"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/lyout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/lyout1"
            android:paddingTop="35dp"
    >
        <TextView
                android:id="@+id/userpwdtext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="left"
                android:layout_marginStart="20dp"
                android:text="@string/signuserpwd"
                android:textSize="20sp" />

        <EditText
                android:id="@+id/userpwd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:hint="@string/userpwd"
                android:inputType="textPassword"
                android:textSize="20sp"
                android:textColorHint="@color/white"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/lyout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/lyout2"
            android:paddingTop="35dp"
    >
        <TextView
                android:id="@+id/userpwd2text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="left"
                android:layout_marginStart="15dp"
                android:text="@string/signuserpwd2"
                android:textSize="20sp"
        />

        <EditText
                android:id="@+id/userpwd2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:inputType="textPassword"
                android:hint="@string/userpwd2"
                android:textSize="20sp"
                android:textColorHint="@color/white"/>
    </LinearLayout>
    <Button
            android:id="@+id/btn_sign"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/lyout3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="45dp"
            android:background="@drawable/shape"
            android:textSize="25sp"
            android:text="@string/qsign"
            android:textColor="@color/white" />
</RelativeLayout>