<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gb1"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="20dp" >

    <TextView
            android:id="@+id/cb_goOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:textSize="20sp"
            android:text="@string/text13"
            android:textColor="@color/black" />

    <TextView
            android:id="@+id/et_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/text10"
            android:layout_margin="30dp"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

    <ImageView
            android:id="@+id/et_1"
            android:layout_width="200dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            android:scaleType="fitCenter"
            android:src="@drawable/gb2" />

    <Button
            android:id="@+id/btn_jd"
            android:layout_width="230dp"
            android:layout_height="70dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/et_1"
            android:layout_marginTop="30dp"
            android:textSize="25sp"
            android:text="@string/text6"
            android:textColor="@color/white"/>
    <Button
            android:id="@+id/btn_pt"
            android:layout_width="230dp"
            android:layout_height="70dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/btn_jd"
            android:layout_marginTop="15dp"
            android:textSize="25sp"
            android:text="@string/text7"
            android:textColor="@color/white" />
    <Button
            android:id="@+id/btn_kn"
            android:layout_width="230dp"
            android:layout_height="70dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/btn_pt"
            android:layout_marginTop="15dp"
            android:textSize="25sp"
            android:text="@string/text8"
            android:textColor="@color/white" />

    <Button
            android:id="@+id/btn_zj"
            android:layout_width="230dp"
            android:layout_height="70dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/btn_kn"
            android:layout_marginTop="15dp"
            android:textSize="25sp"
            android:text="@string/text9"
            android:textColor="@color/white" />
</RelativeLayout>