<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gb1"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="60dp" >
    <ImageView
            android:id="@+id/et_text"
            android:layout_width="200dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:scaleType="fitCenter"
            android:src="@drawable/logo" />
    <ImageView
            android:id="@+id/iv_1"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/et_text"
            android:scaleType="fitCenter"
            android:src="@drawable/ds2" />
    <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_1"
            android:layout_marginTop="10dp"
            android:hint="@string/username"
            android:lines="1"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />
    <EditText
            android:id="@+id/et_userpwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_username"
            android:layout_marginTop="10dp"
            android:hint="@string/userpwd"
            android:inputType="textPassword"
            android:lines="1"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />
    <LinearLayout
            android:id="@+id/ly_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_userpwd"
            android:orientation="horizontal" >
        <CheckBox
                android:id="@+id/cb_rm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="3"
                android:textSize="18sp"
                android:text="@string/checkpwd"
                android:textColor="@color/white" />
        <TextView
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sign"
                android:textColor="@color/white"
                android:textSize="18sp" />
    </LinearLayout>
    <Button
            android:id="@+id/btn_login"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/ly_1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="35dp"
            android:background="@drawable/shape"
            android:textSize="25sp"
            android:text="@string/login"
            android:textColor="@color/white" />

    <TextView
            android:id="@+id/thirdparty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="550dp"
            android:text="@string/bz"
            android:textSize="15sp"
            android:textColor="@color/black"/>
</RelativeLayout>
