<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gb3"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="40dp" >
    <TextView
            android:id="@+id/cb_fh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:textSize="20sp"
            android:text="@string/text13"
            android:textColor="@color/black" />
    <LinearLayout
            android:id="@+id/ly_1"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="30dp"
            android:layout_below="@id/cb_fh"
            android:orientation="horizontal" >
        <TextView
                android:id="@+id/tvCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="2"
                android:text="@string/text11"
                android:textSize="20sp"
                android:textStyle="bold"
        />
        <TextView
                android:id="@+id/tvRemainTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/text12"
                android:textSize="20sp"
                android:textStyle="bold"
        />
    </LinearLayout>

    <TableLayout
            android:id="@+id/ly2"
            android:layout_below="@id/ly_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:shrinkColumns="*"
            android:stretchColumns="*">
        <TableRow>
            <ImageView
                    android:id="@+id/img1"
                    android:background="@drawable/crystalno1"
            />
            <ImageView
                    android:id="@+id/img2"
                    android:background="@drawable/crystalno1"
            />
            <ImageView
                    android:id="@+id/img3"
                    android:background="@drawable/crystalno1"
            />
            <ImageView
                    android:id="@+id/img4"
                    android:background="@drawable/crystalno1"
            />
        </TableRow>
        <TableRow>
            <ImageView
                    android:id="@+id/img5"
                    android:background="@drawable/crystalno1"
            />
            <ImageView
                    android:id="@+id/img6"
                    android:background="@drawable/crystalno1"
            />
            <ImageView
                    android:id="@+id/img7"
                    android:background="@drawable/crystalno1"
            />
            <ImageView
                    android:id="@+id/img8"
                    android:background="@drawable/crystalno1"
            />
        </TableRow>
        <TableRow>
            <ImageView
                    android:id="@+id/img9"
                    android:background="@drawable/crystalno1"
            />
            <ImageView
                    android:id="@+id/img10"
                    android:background="@drawable/crystalno1"
            />
            <ImageView
                    android:id="@+id/img11"
                    android:background="@drawable/crystalno1"
            />
            <ImageView
                    android:id="@+id/img12"
                    android:background="@drawable/crystalno1"
            />
        </TableRow>
        <TableRow>
            <ImageView
                    android:id="@+id/img13"
                    android:background="@drawable/crystalno1"
            />
            <ImageView
                    android:id="@+id/img14"
                    android:background="@drawable/crystalno1"
            />
            <ImageView
                    android:id="@+id/img15"
                    android:background="@drawable/crystalno1"
            />
            <ImageView
                    android:id="@+id/img16"
                    android:background="@drawable/crystalno1"
            />
        </TableRow>
        <TableRow>
            <ImageView
                    android:id="@+id/img17"
                    android:background="@drawable/crystalno1"
            />
            <ImageView
                    android:id="@+id/img18"
                    android:background="@drawable/crystalno1"
            />
            <ImageView
                    android:id="@+id/img19"
                    android:background="@drawable/crystalno1"
            />
            <ImageView
                    android:id="@+id/img20"
                    android:background="@drawable/crystalno1"
            />
        </TableRow>
    </TableLayout>

    <Button
            android:id="@+id/btn_zj"
            android:layout_width="230dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/ly2"
            android:layout_marginTop="25dp"
            android:textSize="25sp"
            android:text="@string/start"
            android:background="@color/purple_700"
            android:textColor="@color/white" />
</RelativeLayout>